--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ShipStation Platform and Plan Recommender</title>
+<title>ShipStation Platform and Plan Selection</title>
 <style>
   :root{
     --bg:#0b0f14; --card:#121822; --muted:#9fb3c8; --text:#e6edf3;
@@ -57,7 +57,7 @@
 <body>
 <div class="container">
   <header>
-    <img class="brand" src="auctane-logo.png" alt="Auctane" />
+    <img class="brand" src="Auctane%20BoxedLockup%20White%20RGB.png" alt="Auctane" />
     <div>
       <div class="title">ShipStation Platform and Plan Recommender</div>
       <div class="subtitle">Mobile friendly guided discovery for field reps · Requirement based plan selection</div>
