--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <header>
     <img class="brand" src="Auctane%20BoxedLockup%20White%20RGB.png" alt="Auctane" />
     <div>
-      <div class="title">ShipStation Platform and Plan Recommender</div>
+      <div class="title">ShipStation Platform and Plan Selection</div>
       <div class="subtitle">Mobile friendly guided discovery for field reps · Requirement based plan selection</div>
     </div>
     <div class="row">
