--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 <title>ShipStation Platform and Plan Guide</title>
 <style>
   :root{
-    /* Keep your design tokens but normalize for the new background */
-    --bg:#003311; 
-    --card:#003311; 
-    --muted:#d4e7d9; 
-    --text:#ffffff;
-    --accent:#7cc4ff; --accent2:#4de1c1; --border:#1f293733; --focus:#7cc4ff55;
+    /* Dark, ship-tech vibe with blue + soft green accents */
+    --bg:#0b0f14; 
+    --card:#121822; 
+    --muted:#9fb3c8; 
+    --text:#e6edf3;
+    --accent:#7cc4ff;    /* bright ship-blue */
+    --accent2:#4de1c1;   /* fresh green accent */
+    --border:#1f2937; 
+    --focus:#7cc4ff55;
   }
   *{box-sizing:border-box}
   html,body{height:100%}
@@ -19,7 +22,7 @@
     margin:0;
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     color:var(--text);
-    background:var(--bg);
+    background:linear-gradient(180deg,#0b0f14,#0b1016 40%,#0b0f14);
   }
   .container{max-width:980px;margin:0 auto;padding:20px}
 
@@ -31,16 +34,16 @@
   .brand{height:auto;max-width:260px;width:50vw;min-width:160px}
   .title{font-size:clamp(20px,2.6vw,28px);font-weight:700}
   .subtitle{color:var(--muted);font-size:14px}
-  .pill{padding:6px 10px;border-radius:999px;background:#0e142033;border:1px solid var(--border);font-size:12px;color:var(--muted)}
+  .pill{padding:6px 10px;border-radius:999px;background:#0e1420;border:1px solid var(--border);font-size:12px;color:var(--muted)}
   .row{display:flex;gap:8px;flex-wrap:wrap;justify-content:center}
 
-  .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:16px;margin:14px 0;box-shadow:0 10px 30px rgba(0,0,0,.18)}
+  .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:16px;margin:14px 0;box-shadow:0 10px 30px rgba(0,0,0,.25)}
   .section-title{font-size:18px;font-weight:700;margin:6px 0 14px;border-left:4px solid var(--accent);padding-left:10px}
   fieldset{border:none;padding:0;margin:0 0 8px}
   /* Uniform question text across legends & subheaders */
   legend,.subheader{font-weight:700;margin:14px 0 8px;font-size:15px;color:var(--text)}
-  label.option{display:flex;align-items:flex-start;gap:10px;padding:12px;border:1px solid var(--border);border-radius:12px;background:#0f152033;cursor:pointer}
-  label.option:hover{border-color:#2b3a4f66}
+  label.option{display:flex;align-items:flex-start;gap:10px;padding:12px;border:1px solid var(--border);border-radius:12px;background:#0f1520;cursor:pointer}
+  label.option:hover{border-color:#2b3a4f}
   input[type=radio],input[type=checkbox]{width:18px;height:18px;margin-top:2px}
   .opt-title{font-weight:600}
 
@@ -57,18 +60,24 @@
     }
   }
 
-  select, textarea, input[type=text]{width:100%;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f152033;color:var(--text)}
+  select, textarea, input[type=text]{
+    width:100%;padding:12px;border-radius:10px;border:1px solid var(--border);
+    background:#0f1520;color:var(--text)
+  }
   textarea{min-height:90px;resize:vertical}
-  .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;justify-content:flex-end} /* moved to right */
+
+  /* Buttons right-aligned per your last change */
+  .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;justify-content:flex-end}
   .btn{appearance:none;border:none;border-radius:12px;padding:12px 16px;font-weight:700;cursor:pointer;color:#061016;background:linear-gradient(135deg,var(--accent),var(--accent2));box-shadow:0 6px 20px rgba(80,180,220,.35)}
   .btn.secondary{background:#101826;color:var(--text);border:1px solid var(--border)}
   .btn.link{background:transparent;border:1px dashed var(--border);color:var(--text)}
+
   .hidden{display:none !important}
   .result{display:none}
   .result.show{display:block}
   .badges{display:flex;gap:8px;flex-wrap:wrap;margin:8px 0}
-  .badge{border:1px solid var(--border);background:#0f152033;border-radius:10px;padding:6px 10px;font-size:12px}
-  .banner{border:1px dashed #2b3a4f66;background:#0d142033;padding:14px;border-radius:12px;margin:12px 0}
+  .badge{border:1px solid var(--border);background:#0f1520;border-radius:10px;padding:6px 10px;font-size:12px}
+  .banner{border:1px dashed #2b3a4f;background:#0d1420;padding:14px;border-radius:12px;margin:12px 0}
   table{width:100%;border-collapse:collapse;font-size:14px}
   th,td{padding:10px;border-bottom:1px solid var(--border);text-align:left}
   th{color:var(--muted);font-weight:600}
@@ -88,18 +97,12 @@
   /* Standalone spacing block */
   .solo-block{margin-top:22px;padding-top:10px;border-top:1px dashed var(--border)}
 
-  /* Discovery & Checklist */
-  .discovery-lead{font-size:13px;color:var(--muted);margin:-2px 0 12px}
-  .checklist{display:grid;grid-template-columns:1fr;gap:8px}
-  .checklist label{display:flex;align-items:center;gap:10px;padding:10px;border:1px dashed var(--border);border-radius:10px;background:#0f152033}
-  @media(min-width:700px){ .checklist{grid-template-columns:1fr 1fr} }
-
-  /* Typeahead chips + suggestions (Store Picker) */
+  /* Store picker bits remain tuned to dark theme */
   .tagpicker{position:relative}
   .tagchips{display:flex;flex-wrap:wrap;gap:8px;margin:6px 0 8px}
-  .tagchip{display:inline-flex;align-items:center;gap:6px;padding:6px 10px;border-radius:999px;background:#0f152033;border:1px solid var(--border);font-size:12px}
-  .tagchip button{all:unset;cursor:pointer;font-weight:700}
-  .taginput{width:100%;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f152033;color:var(--text)}
+  .tagchip{display:inline-flex;align-items:center;gap:6px;padding:6px 10px;border-radius:999px;background:#0f1520;border:1px solid var(--border);font-size:12px}
+  .tagchip button{all:unset;cursor:pointer;font-weight:700;color:var(--muted)}
+  .taginput{width:100%;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f1520;color:var(--text)}
   .suggest{position:absolute;z-index:20;left:0;right:0;top:100%;margin-top:4px;background:#0f1520;border:1px solid var(--border);border-radius:10px;box-shadow:0 8px 24px rgba(0,0,0,.35);max-height:230px;overflow:auto}
   .suggest .opt{padding:10px 12px;cursor:pointer;border-bottom:1px solid var(--border)}
   .suggest .opt:last-child{border-bottom:none}
@@ -108,8 +111,20 @@
 
   /* Validation feedback */
   .invalid{box-shadow:0 0 0 2px #ff6666 inset}
-  .error-banner{background:#660000cc;border:1px solid #ff6666;color:#fff;padding:10px;border-radius:10px;margin-bottom:10px}
+  .error-banner{background:#1b0b0bcc;border:1px solid #ff6666;color:#fff;padding:10px;border-radius:10px;margin-bottom:10px}
+
+  /* >>> Extra breathing room for the API flow <<< */
+  #sec-api{scroll-margin-top:12px}
+  #sec-api fieldset{margin-bottom:18px}
+  #sec-api label.option{padding:16px}
+  #sec-api .section-title{margin-bottom:18px}
+  @media(min-width:900px){
+    #sec-api fieldset{margin-bottom:34px}
+    #sec-api .cols-2.extra-gap{gap:32px}
+    #sec-api .solo-block{margin-top:36px;padding-top:16px}
+  }
 </style>
+
 </head>
 <body>
 <div class="container">
