logo swap take 2

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
 
   // Logos
   var LOGO_DEFAULT = 'Auctane%20BoxedLockup%20White%20RGB.png';
-  var LOGO_UI  = 'ShipStation%%20White%20CMYK%20(1).png';
+  var LOGO_UI  = 'ShipStation%20BoxedLockup%20White%20BrightGreen%20DeepIndigo%20RGB.png';
   var LOGO_API = 'Logo_ShipStationAPI_WhiteGreen_RGB.png';
 
   var PLAN_ORDER = ['Free','Starter','Standard','Premium'];
