--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@
     font-weight: var(--answer-font-weight) !important;
   }
 </style>
+    }
+</style>
 </head>
 <body>
 <div class="container">
